<resources>
    <string name="app_name">Child Specialist</string>
    <string name="menu_home">Home</string>
    <string name="menu_injectione">Vaccin</string>
    <string name="menu_calculator">BMI</string>
    <string name="menu_nutrients">Nutrition</string>
    <string name="menu_disease">Disease</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="calculatr">Calculate</string>
    <string name="calc_heading">Health Calculator</string>
    <string name="hint">00</string>
    <string name="under">Your Child BMI is Under Weight</string>
    <string name="over">Your Child BMI is Over Weight</string>
    <string name="obese">Your Child BMI is Obese</string>
    <string name="normal">Your Child BMI is Normal</string>
    <string name="heading_click">Disease</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="have_account">If you have already an account</string>
    <string name="bmi">CHILD BMI</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create an account</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="h_calc">Health Calculator</string>
    <string name="a_calc">Anemia Calculator</string>
    <string name="homo">Actual(HB)</string>
    <string name="level_homo">Target(HB)</string>
    <string name="hb_unit">g/dl</string>
    <string name="iron">Iron</string>
    <string name="mg">mg</string>
    <string name="head">Iron Deficiency</string>
    <string name="nutr_descr">Nutrition Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Find the nearest health care center</string>
    <string name="more_vaccin">check more about vaccination</string>
    <string name="hospital">Nearest Hospitals</string>
    <string name="home_set">Set Goal</string>
    <string name="home_vaccin">Vaccination</string>
    <string name="detail_vaccin">Vaccination is the administration of the vaccino to help the immune system develop protection from a diseease.</string>
    <string name="health">Health</string>
    <string name="detail_health">Kids who measure at the 85th to 94th percentile are considered overweight, because of fat access of body.</string>
</resources>
