<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Frame_Back"

    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/back_page"
        android:paddingStart="15dp"
        android:paddingTop="35dp"
        android:text="@string/h_calc"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/welcom" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay"
        android:layout_marginTop="160dp">

        <TextView
            android:id="@+id/title_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:text="@string/weight"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/get_weight"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginEnd="85dp"
            android:layout_marginTop="5dp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:visibility="invisible"
            android:id="@+id/check_field"
            android:background="@drawable/ic_empty"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay"
        android:id="@+id/lay2"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/title_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="5dp"
            android:text="@string/height"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/get_height"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edit_text"
            android:gravity="center"
            android:hint="@string/hint"
            android:inputType="number"
            android:textSize="18sp"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginEnd="81dp"
            android:layout_marginTop="5dp"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:background="@drawable/ic_empty"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            android:id="@+id/check_field2"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay2"
        android:id="@+id/rel"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/bmi_calc"
            android:layout_width="279dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/mybutton"
            android:text="@string/calculatr"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/bmi" />

</RelativeLayout>